--- a/testDash.Rmd
+++ b/testDash.Rmd
@@ -1,17 +1,41 @@
+---
+title: "Vermont Veg Explorer"
+output: 
+  flexdashboard::flex_dashboard:
+    orientation: columns
+    vertical_layout: fill
+---
 
-# try heat map for cove forests
+```{r setup, include=FALSE}
+library(flexdashboard)
+library(tidyverse)
 
-
-# libraries
-library(readr)
-library(ggplot2) # ggplot() for plotting
 library(RColorBrewer)
 library(scales)
+```
 
+Historical Vegetation
+=====================================  
+
+Column {data-width=650}
+-----------------------------------------------------------------------
+
+### Chart A
+
+```{r}
+knitr::include_graphics("vtBPS.JPG")
+```
+
+Column {data-width=350}
+-----------------------------------------------------------------------
+
+### Chart B
+
+```{r}
 
 # cove
 nh_heat <- read_csv("nh_heat.csv", col_types = cols(percent = col_number()))
-View(nhheat)
+
 
 
 
@@ -31,7 +55,11 @@ nhHeatChart <- ggplot(nh_heat,aes(x=evc, y=evh, fill = percent)) +
 
 
 nhHeatChart
+```
 
-ggsave(filename="nhHatChart.png",width=10,height=8,units='in',dpi=300)
+### Chart C
 
+```{r}
+
+```
 
